add classes web app

--- a/Tanguy/webdesing.html
+++ b/Tanguy/webdesing.html
@@ -1,92 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="webdesign">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" 
-        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" 
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="webdesign" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Web Design</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <img src="../src/img/Group 13.png" alt="logo designo" />
+      <img
+        src="./src/img/Group 13.png"
+        alt="Logo Designo"
+        class="header__nav__img"
+      />
       <nav>
-        <ul>
-          <li><a href=""></a>our company</li>
-          <li><a href=""></a>locations</li>
-          <li><a href=""></a>contact</li>
+        <ul class="header__nav__order">
+          <li><a href="">Our company</a></li>
+          <li><a href="./mariya/locations.html">Locations</a></li>
+          <li><a href="./mariya/contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
-        <section class="">
-            <h2>Web Design</h2>
-            <p>We build websites that serve as powerful marketing tools 
-                and bring memorable brand experiences.</p>
-        </section>
+      <section class="section__solutions">
+        <h2>Web Design</h2>
+        <p>
+          We build websites that serve as powerful marketing tools and bring
+          memorable brand experiences.
+        </p>
+      </section>
 
-        <section class="">
-            <div class="">
-                <img src="../src/img/Express - Desktop-5.jpg" alt="image express">
-                <h2>EXPRESS</h2>
-                <p>A multi-carrier shipping website for ecommerce businesses</p>
-            </div>
+      <section class="section__tech">
+        <div class="tech__div">
+          <img src="../src/img/Express - Desktop-5.jpg" alt="image express" />
+          <h2>EXPRESS</h2>
+          <p>A multi-carrier shipping website for ecommerce businesses</p>
+        </div>
 
-            <div class="">
-                <img src="../src/img/Express - Desktop-4.jpg" alt="image transfer">
-                <h2>TRANSFER</h2>
-                <p>Site for low-cost money transfers and sending money within seconds</p>
-            </div>
+        <div class="tech__div">
+          <img src="../src/img/Express - Desktop-4.jpg" alt="image transfer" />
+          <h2>TRANSFER</h2>
+          <p>
+            Site for low-cost money transfers and sending money within seconds
+          </p>
+        </div>
 
-            <div class="">
-                <img src="../src/img/Express - Desktop-3.jpg" alt="image photon">
-                <h2>PHOTON</h2>
-                <p>A state-of-the-art music player with high-resolution audio and DSP effects</p>
-            </div>
+        <div class="tech__div">
+          <img src="../src/img/Express - Desktop-3.jpg" alt="image photon" />
+          <h2>PHOTON</h2>
+          <p>
+            A state-of-the-art music player with high-resolution audio and DSP
+            effects
+          </p>
+        </div>
 
-            <div class="">
-                <img src="../src/img/Express - Desktop-2.jpg" alt="image builder">
-                <h2>BUILDER</h2>
-                <p>Connects users with local contractors based on their location</p>
-            </div> 
+        <div class="tech__div">
+          <img src="../src/img/Express - Desktop-2.jpg" alt="image builder" />
+          <h2>BUILDER</h2>
+          <p>Connects users with local contractors based on their location</p>
+        </div>
 
-            <div class="">
-                <img src="../src/img/Express - Desktop-1.jpg" alt="image blogr">
-                <h2>BLOGR</h2>
-                <p>Blogr is a platform for creating an online blog or publication</p>
-            </div>
+        <div class="tech__div">
+          <img src="../src/img/Express - Desktop-1.jpg" alt="image blogr" />
+          <h2>BLOGR</h2>
+          <p>Blogr is a platform for creating an online blog or publication</p>
+        </div>
 
-            <div class="">
-                <img src="../src/img/Express - Desktop.jpg" alt="image camp">
-                <h2>CAMP</h2>
-                <p>Get expert training in coding, data, design, and digital marketing</p>
-            </div>
-        </section>
+        <div class="tech__div">
+          <img src="../src/img/Express - Desktop.jpg" alt="image camp" />
+          <h2>CAMP</h2>
+          <p>
+            Get expert training in coding, data, design, and digital marketing
+          </p>
+        </div>
+      </section>
 
-        <section class="">
-            <article class="">
-                <img src="../src/img/Bitmap-1.jpg" alt="image app design">
-                <h1>APP DESIGN</h1>
-                <a href="appdesign.html" target="_blank">VIEW PROJECTS</a>
-            </article>
+      <section class="section__projects">
+        <article class="projects__app">
+          <img src="../src/img/Bitmap-1.jpg" alt="image app design" />
+          <h1>APP DESIGN</h1>
+          <a href="appdesign.html" target="_blank">VIEW PROJECTS</a>
+        </article>
 
-            <article class="">
-                <img src="../src/img/Bitmap.jpg" alt="image graphic design">
-                <h1>GRAPHIC DESIGN</h1>
-                <a href="">VIEW PROJECTS</a>
-            </article>
-        </section>
+        <article class="projects__graphic">
+          <img src="../src/img/Bitmap.jpg" alt="image graphic design" />
+          <h1>GRAPHIC DESIGN</h1>
+          <a href="">VIEW PROJECTS</a>
+        </article>
+      </section>
     </main>
 
     <footer>
-        <li><i class="fa-brands fa-facebook-square"></i></li>
-                    <li><i class="fa-brands fa-youtube-square"></i></li>
-                    <li><i class="fa-brands fa-twitter"></i></li>
-                    <li><i class="fa-brands fa-pinterest"></i></li>
-                    <li><i class="fa-brands fa-instagram"></i></li>
+      <section class="section__contact">
+        <h1>Let's talk about your project</h1>
+        <p>
+          Ready to take it to the next level? Contact us today and find out how
+          our expertise can help your business grow.
+        </p>
+        <a href="">GET IN TOUCH</a>
+      </section>
+      <section class="footer__nav">
+        <div>
+          <img
+            src="./src/img/Group 13-1.png"
+            alt="Logo Designo"
+            class="footer__nav__img"
+          />
+          <nav>
+            <ul class="footer__nav__order">
+              <li><a href="">Our compagnie</a></li>
+              <li><a href="./mariya/locations.html">Locations</a></li>
+              <li><a href="./mariya/contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+      <section class="section__info">
+        <div class="info__address">
+          <h3>Designo Central Office</h3>
+          <p>386 Wellington Street1000 Brussels - Belgium</p>
+        </div>
+        <div class="info__contact">
+          <h3>Contact Us (Central Office)</h3>
+          <p>P : +1 253-863-8967 M : contact@designo.co Belgium</p>
+        </div>
+      </section>
+      <section class="section__media">
+        <ul class="media__order">
+          <li><i class="fa-brands fa-facebook-square"></i></li>
+          <li><i class="fa-brands fa-youtube-square"></i></li>
+          <li><i class="fa-brands fa-twitter"></i></li>
+          <li><i class="fa-brands fa-pinterest"></i></li>
+          <li><i class="fa-brands fa-instagram"></i></li>
+        </ul>
+      </section>
     </footer>
-</body>
+  </body>
 </html>
