add classes location contact

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Designo</title>
+    <title>About</title>
   </head>
   <body>
     <header>
