--- a/mariya/contact.html
+++ b/mariya/contact.html
@@ -12,22 +12,25 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Designo</title>
+    <title>Contact</title>
   </head>
   <body>
     <header>
-      <img src="../src/img/Group 13.png" alt="logo designo" />
+      <img
+        src="./src/img/Group 13.png"
+        alt="Logo Designo"
+        class="header__nav__img"
+      />
       <nav>
-        <ul>
-          <li><a href=""></a>our company</li>
-          <li><a href="./locations.html"></a>locations</li>
-          <li><a href="./contact.html"></a>contact</li>
+        <ul class="header__nav__order">
+          <li><a href="">Our company</a></li>
+          <li><a href="./mariya/locations.html">Locations</a></li>
+          <li><a href="./mariya/contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
-
     <main>
-      <section>
+      <section class="section__form">
         <div>
           <h2>Contact Us</h2>
           <p>
@@ -58,20 +61,20 @@
         </div>
       </section>
 
-      <section>
-        <article>
+      <section class="section__location">
+        <article class="location__article__canada">
           <img src="../src/img/Group 10.svg" alt="brussels tower" />
           <h1>Belgium</h1>
           <a href=""></a>
         </article>
 
-        <article>
+        <article class="location__article__australia">
           <img src="../src/img/Group 15.svg" alt="sydney opera" />
           <h1>Australia</h1>
           <a href=""></a>
         </article>
 
-        <article>
+        <article class="location__article__uk">
           <img src="../src/img/Group 17.svg" alt="london bridge" />
           <h1>United Kingdom</h1>
           <a href=""></a>
@@ -80,39 +83,19 @@
     </main>
 
     <footer>
-      <section>
-        <img src="../src/img/Group 13-1.png" alt="logo designo" />
+      <header>
+        <img
+          src="./src/img/Group 13.png"
+          alt="Logo Designo"
+          class="header__nav__img"
+        />
         <nav>
-          <ul>
-            <li><a href=""></a>our company</li>
-            <li><a href="./locations.html"></a>locations</li>
-            <li><a href="./contact.html"></a>contact</li>
+          <ul class="header__nav__order">
+            <li><a href="">Our company</a></li>
+            <li><a href="./mariya/locations.html">Locations</a></li>
+            <li><a href="./mariya/contact.html">Contact</a></li>
           </ul>
         </nav>
-      </section>
-
-      <section>
-        <div>
-          <h3>Designo Central Office</h3>
-          <p>386 Wellington Street 1000 Brussels - Belgium</p>
-        </div>
-        <div>
-          <h3>Contact Us (Central Office)</h3>
-          <p>P : +1 253-863-8967 M : contact@designo.co</p>
-        </div>
-      </section>
-
-      <section>
-        <nav>
-          <ul>
-            <li><i class="fa-brands fa-facebook-square"></i></li>
-            <li><i class="fa-brands fa-youtube-square"></i></li>
-            <li><i class="fa-brands fa-twitter"></i></li>
-            <li><i class="fa-brands fa-pinterest"></i></li>
-            <li><i class="fa-brands fa-instagram"></i></li>
-          </ul>
-        </nav>
-      </section>
-    </footer>
+      </header>
   </body>
 </html>
