--- a/mariya/locations.html
+++ b/mariya/locations.html
@@ -12,22 +12,26 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Designo</title>
+    <title>Locations</title>
   </head>
   <body>
     <header>
-      <img src="../src/img/Group 13.png" alt="logo designo" />
+      <img
+        src="../src/img/Group 13.png"
+        alt="logo designo"
+        class="header__nav__img"
+      />
       <nav>
-        <ul>
+        <ul class="header__nav__order">
           <li><a href=""></a>our company</li>
-          <li><a href="./locations.html"></a>locations</li>
-          <li><a href="./contact.html"></a>contact</li>
+          <li><a href="../mariya/locations.html"></a>locations</li>
+          <li><a href="../mariya/contact.html"></a>contact</li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <section>
+      <section class="section__location__belgium">
         <h2>Belgium</h2>
         <div>
           <h3>Designo Central Office</h3>
@@ -39,7 +43,7 @@
         </div>
         <img src="../src/img/Group 4-2.png" alt="belgium_map" />
       </section>
-      <section>
+      <section class="section__location__australia">
         <h2>Australia</h2>
         <div>
           <h3>Designo AU Office</h3>
@@ -51,7 +55,7 @@
         </div>
         <img src="../src/img/Group 4.png" alt="australia_map" />
       </section>
-      <section>
+      <section class="section__location__uk">
         <h2>United Kingdom</h2>
         <div>
           <h3>Designo UK Office</h3>
@@ -66,49 +70,48 @@
     </main>
 
     <footer>
-      <section>
-        <article>
-          <h1>Let's talk about your project</h1>
-          <p>
-            Ready to take it to the next level? Contact us today and find out
-            how our expertise can help your business grow.
-          </p>
-          <a href="">Get in touch</a>
-        </article>
+      <section class="section__contact">
+        <h1>Let's talk about your project</h1>
+        <p>
+          Ready to take it to the next level? Contact us today and find out how
+          our expertise can help your business grow.
+        </p>
+        <a href="">GET IN TOUCH</a>
       </section>
-
-      <section>
-        <img src="../src/img/Group 13-1.png" alt="logo designo" />
-        <nav>
-          <ul>
-            <li><a href=""></a>our company</li>
-            <li><a href="./locations.html"></a>locations</li>
-            <li><a href="./contact.html"></a>contact</li>
-          </ul>
-        </nav>
-      </section>
-
-      <section>
+      <section class="footer__nav">
         <div>
+          <img
+            src="./src/img/Group 13-1.png"
+            alt="Logo Designo"
+            class="footer__nav__img"
+          />
+          <nav>
+            <ul class="footer__nav__order">
+              <li><a href="">Our compagnie</a></li>
+              <li><a href="./mariya/locations.html">Locations</a></li>
+              <li><a href="./mariya/contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+      <section class="section__info">
+        <div class="info__address">
           <h3>Designo Central Office</h3>
-          <p>386 Wellington Street 1000 Brussels - Belgium</p>
+          <p>386 Wellington Street1000 Brussels - Belgium</p>
         </div>
-        <div>
+        <div class="info__contact">
           <h3>Contact Us (Central Office)</h3>
-          <p>P : +1 253-863-8967 M : contact@designo.co</p>
+          <p>P : +1 253-863-8967 M : contact@designo.co Belgium</p>
         </div>
       </section>
-
-      <section>
-        <nav>
-          <ul>
-            <li><i class="fa-brands fa-facebook-square"></i></li>
-            <li><i class="fa-brands fa-youtube-square"></i></li>
-            <li><i class="fa-brands fa-twitter"></i></li>
-            <li><i class="fa-brands fa-pinterest"></i></li>
-            <li><i class="fa-brands fa-instagram"></i></li>
-          </ul>
-        </nav>
+      <section class="section__media">
+        <ul class="media__order">
+          <li><i class="fa-brands fa-facebook-square"></i></li>
+          <li><i class="fa-brands fa-youtube-square"></i></li>
+          <li><i class="fa-brands fa-twitter"></i></li>
+          <li><i class="fa-brands fa-pinterest"></i></li>
+          <li><i class="fa-brands fa-instagram"></i></li>
+        </ul>
       </section>
     </footer>
   </body>
