--- a/index.html
+++ b/index.html
@@ -103,41 +103,43 @@
         </p>
         <a href="">GET IN TOUCH</a>
       </section>
-      <section class="footer__nav">
-        <div>
-          <img
-            src="./src/img/Group 13-1.png"
-            alt="Logo Designo"
-            class="footer__nav__img"
-          />
-          <nav>
-            <ul class="footer__nav__order">
-              <li><a href="">Our compagnie</a></li>
-              <li><a href="./mariya/locations.html">Locations</a></li>
-              <li><a href="./mariya/contact.html">Contact</a></li>
-            </ul>
-          </nav>
-        </div>
-      </section>
-      <section class="section__info">
-        <div class="info__address">
-          <h3>Designo Central Office</h3>
-          <p>386 Wellington Street1000 Brussels - Belgium</p>
-        </div>
-        <div class="info__contact">
-          <h3>Contact Us (Central Office)</h3>
-          <p>P : +1 253-863-8967 M : contact@designo.co Belgium</p>
-        </div>
-      </section>
-      <section class="section__media">
-        <ul class="media__order">
-          <li><i class="fa-brands fa-facebook-square"></i></li>
-          <li><i class="fa-brands fa-youtube-square"></i></li>
-          <li><i class="fa-brands fa-twitter"></i></li>
-          <li><i class="fa-brands fa-pinterest"></i></li>
-          <li><i class="fa-brands fa-instagram"></i></li>
-        </ul>
-      </section>
+      <div class="nav__background">
+        <section class="footer__nav">
+          <div>
+            <img
+              src="./src/img/Group 13-1.png"
+              alt="Logo Designo"
+              class="footer__nav__img"
+            />
+            <nav>
+              <ul class="footer__nav__order">
+                <li><a href="">Our compagnie</a></li>
+                <li><a href="./mariya/locations.html">Locations</a></li>
+                <li><a href="./mariya/contact.html">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+        </section>
+        <section class="section__info">
+          <div class="info__address">
+            <h3>Designo Central Office</h3>
+            <p>386 Wellington Street1000 Brussels - Belgium</p>
+          </div>
+          <div class="info__contact">
+            <h3>Contact Us (Central Office)</h3>
+            <p>P : +1 253-863-8967 M : contact@designo.co Belgium</p>
+          </div>
+        </section>
+        <section class="section__media">
+          <ul class="media__order">
+            <li><i class="fa-brands fa-facebook-square"></i></li>
+            <li><i class="fa-brands fa-youtube-square"></i></li>
+            <li><i class="fa-brands fa-twitter"></i></li>
+            <li><i class="fa-brands fa-pinterest"></i></li>
+            <li><i class="fa-brands fa-instagram"></i></li>
+          </ul>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
