add style footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./src/css/style.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Designo</title>
   </head>
   <body>
@@ -120,14 +126,15 @@
             </nav>
           </div>
         </section>
+        <hr />
         <section class="section__info">
           <div class="info__address">
             <h3>Designo Central Office</h3>
-            <p>386 Wellington Street1000 Brussels - Belgium</p>
+            <p>386 Wellington Street 1000 Brussels - Belgium</p>
           </div>
           <div class="info__contact">
             <h3>Contact Us (Central Office)</h3>
-            <p>P : +1 253-863-8967 M : contact@designo.co Belgium</p>
+            <p>P : +1 253-863-8967 M : contact@designo.co</p>
           </div>
         </section>
         <section class="section__media">
