--- a/Tanguy/appdesign.html
+++ b/Tanguy/appdesign.html
@@ -88,7 +88,7 @@
         <article class="projects__web">
           <img src="../src/img/Group 17.jpg" alt="image web desing" />
           <h1>WEB DESIGN</h1>
-          <a href="webdesing.html" target="_blank">VIEW PROJECTS</a>
+          <a href="webdesign.html" target="_blank">VIEW PROJECTS</a>
         </article>
 
         <article class="projects__graphic">
