add style footer1.1

--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
     <footer>
       <section class="section__contact">
         <div>
-        <h1>Let's talk about your project</h1>
-        <p>
-          Ready to take it to the next level? Contact us today and find out how
-          our expertise can help your business grow.
-        </p>
+          <h1>Let's talk about your project</h1>
+          <p>
+            Ready to take it to the next level? Contact us today and find out
+            how our expertise can help your business grow.
+          </p>
         </div>
         <a href="">GET IN TOUCH</a>
       </section>
-      <div class="nav__background">
+      <div class="lower__container">
         <section class="footer__nav">
           <div>
             <img
@@ -129,25 +129,33 @@
           </div>
         </section>
         <hr />
-        <section class="section__info">
-          <div class="info__address">
-            <h3>Designo Central Office</h3>
-            <p>386 Wellington Street 1000 Brussels - Belgium</p>
-          </div>
-          <div class="info__contact">
-            <h3>Contact Us (Central Office)</h3>
-            <p>P : +1 253-863-8967 M : contact@designo.co</p>
-          </div>
-        </section>
-        <section class="section__media">
-          <ul class="media__order">
-            <li><i class="fa-brands fa-facebook-square"></i></li>
-            <li><i class="fa-brands fa-youtube-square"></i></li>
-            <li><i class="fa-brands fa-twitter"></i></li>
-            <li><i class="fa-brands fa-pinterest"></i></li>
-            <li><i class="fa-brands fa-instagram"></i></li>
-          </ul>
-        </section>
+        <div class="inline__lower__container">
+          <section class="section__info">
+            <div class="info__address">
+              <h3>Designo Central Office</h3>
+              <p>
+                386 Wellington Street <br />
+                1000 Brussels - Belgium
+              </p>
+            </div>
+            <div class="info__contact">
+              <h3>Contact Us (Central Office)</h3>
+              <p>
+                P : +1 253-863-8967 <br />
+                M : contact@designo.co
+              </p>
+            </div>
+          </section>
+          <section class="section__media">
+            <ul class="media__order">
+              <li><i class="fa-brands fa-facebook-square"></i></li>
+              <li><i class="fa-brands fa-youtube-square"></i></li>
+              <li><i class="fa-brands fa-twitter"></i></li>
+              <li><i class="fa-brands fa-pinterest"></i></li>
+              <li><i class="fa-brands fa-instagram"></i></li>
+            </ul>
+          </section>
+        </div>
       </div>
     </footer>
   </body>
