--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             />
             <nav>
               <ul class="footer__nav__order">
-                <li><a href="">Our compagnie</a></li>
+                <li><a href="">Our company</a></li>
                 <li><a href="./mariya/locations.html">Locations</a></li>
                 <li><a href="./mariya/contact.html">Contact</a></li>
               </ul>
