--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <section class="section__projects">
         <article class="projects__web">
           <h1>Web Design</h1>
-          <img src="./src/img/Group 17.jpg" alt="laptop" />
+          <img src="./src/img/web-design.png" alt="laptop" />
           <a href="Tanguy/webdesign.html" target="_blank">View projects</a>
         </article>
         <article class="projects__app">
