--- a/Tanguy/webdesign.html
+++ b/Tanguy/webdesign.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Home page" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="webdesign" />
-    <link rel="stylesheet" href="../src/css/style.min.css"/>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
       integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="../src/css/style.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
     />
     <title>Web Design</title>
   </head>
@@ -24,9 +30,9 @@
       />
       <nav>
         <ul class="header__nav__order">
-          <li><a href="">Our company</a></li>
-          <li><a href="./mariya/locations.html">Locations</a></li>
-          <li><a href="./mariya/contact.html">Contact</a></li>
+          <li><a href="">OUR COMPANY</a></li>
+          <li><a href="./mariya/locations.html">LOCATIONS</a></li>
+          <li><a href="./mariya/contact.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
