--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./src/css/style.min.css">
     <title>About</title>
   </head>
   <body>
@@ -31,6 +32,7 @@
     </header>
     <main>
       <section class="section__aboutUs">
+        <div>
         <h1>About Us</h1>
         <p>
           Founded in 2010, we are a creative agency that produces lasting
@@ -39,18 +41,24 @@
           impact. We're always looking forward to creating brands, products, and
           digital experiences that connect with our clients' audiences.
         </p>
+      </div>
+      <div>
         <img
           src="./src/img/Group 3.jpg"
           alt="work table"
           class="section__aboutUs__img"
         />
+      </div>
       </section>
       <section class="section__skills">
+        <div>
         <img
           src="./src/img/Group 3 Copy.jpg"
           alt="watching art"
           class="section__skills__img"
         />
+        </div>
+        <div>
         <h1>World-class talent</h1>
         <p>
           We are a crew of strategists, problem-solvers, and technologists.
@@ -62,6 +70,7 @@
           delivery. Clients have always been impressed with our high-quality
           outcomes that encapsulates their brand's story and mission.
         </p>
+        </div>
       </section>
       <section class="section__location">
         <article class="location__article__canada">
@@ -89,6 +98,7 @@
         </article>
       </section>
       <section class="section__solutions">
+        <div>
         <h1>The real deal</h1>
         <p>
           As strategic partners in our clients' businesses, we are ready to take
@@ -99,11 +109,14 @@
           and captivating ways. By combining business and marketing strategies,
           we inspire audiences to take action and drive real results.
         </p>
+      </div>
+      <div>
         <img
           src="./src/img/Bitmap Copy.jpg"
           alt="stick on the wall"
           class="solutions__img"
         />
+      </div>
       </section>
     </main>
     <footer>
