--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
       </section>
       <section class="section__projects">
         <article class="projects__web">
+          <div>
           <h1>Web Design</h1>
-          <img src="./src/img/Group 17.jpg" alt="laptop" />
+          <!-- <img src="./src/img/Group 17.jpg" alt="laptop" /> -->
           <a href="Tanguy/webdesign.html" target="_blank">View projects</a>
+        </div>
         </article>
         <article class="projects__app">
           <h1>App Design</h1>
