--- a/index.html
+++ b/index.html
@@ -55,19 +55,33 @@
       </section>
       <section class="section__projects">
         <article class="projects__web">
-          <h1>Web Design</h1>
-          <img src="./src/img/web-design.png" alt="laptop" />
-          <a href="Tanguy/webdesign.html" target="_blank">View projects</a>
+          <div class="projects__web__img">
+            <img src="./src/img/web-design.png" alt="laptop" />
+            <div class="projects__web__text">
+              <h1>Web Design</h1>
+              <a href="Tanguy/webdesign.html" target="_blank">View projects</a>
+            </div>
+          </div>
         </article>
+
         <article class="projects__app">
-          <h1>App Design</h1>
-          <img src="./src/img/Bitmap.png" alt="smartphone" />
-          <a href="Tanguy/appdesign.html" target="_blank">View projects</a>
+          <div class="projects__app__img">
+            <img src="./src/img/Bitmap-1.jpg" alt="smartphone" />
+            <div class="projects__app__text">
+              <h1>App Design</h1>
+              <a href="Tanguy/appdesign.html" target="_blank">View projects</a>
+            </div>
+          </div>
         </article>
+
         <article class="projects__graphic">
-          <h1>Graphic Design</h1>
-          <img src="./src/img/Bitmap.jpg" alt="graphic" />
-          <a href="">View projects</a>
+          <div class="projects__graphic__img">
+            <img src="./src/img/Bitmap.jpg" alt="graphic" />
+            <div class="projects__graphic__text">
+              <h1>Graphic Design</h1>
+              <a href="">View projects</a>
+            </div>
+          </div>
         </article>
       </section>
       <section class="section__values">
