add final version grid

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
             <img src="./src/img/web-design.png" alt="laptop" />
             <div class="projects__web__text">
               <h1>Web Design</h1>
-              <a href="Tanguy/webdesign.html" target="_blank">View projects</a>
+              <a href="Tanguy/webdesign.html" target="_blank"
+                >View projects
+                <img src="./src/img/Path 5.png" alt="arrow" />
+              </a>
             </div>
           </div>
         </article>
@@ -69,7 +72,10 @@
             <img src="./src/img/Bitmap-1.jpg" alt="smartphone" />
             <div class="projects__app__text">
               <h1>App Design</h1>
-              <a href="Tanguy/appdesign.html" target="_blank">View projects</a>
+              <a href="Tanguy/appdesign.html" target="_blank"
+                >View projects
+                <img src="./src/img/Path 5.png" alt="arrow" />
+              </a>
             </div>
           </div>
         </article>
@@ -79,7 +85,10 @@
             <img src="./src/img/Bitmap.jpg" alt="graphic" />
             <div class="projects__graphic__text">
               <h1>Graphic Design</h1>
-              <a href="">View projects</a>
+              <a href=""
+                >View projects
+                <img src="./src/img/Path 5.png" alt="arrow" />
+              </a>
             </div>
           </div>
         </article>
