add class solutions

--- a/Tanguy/appdesign.html
+++ b/Tanguy/appdesign.html
@@ -37,7 +37,7 @@
       </nav>
     </header>
     <main>
-      <section class="section__solutions">
+      <section class="section__solutions__design">
         <div>
         <h2>App Design</h2>
         <p>
