--- a/Tanguy/webdesign.html
+++ b/Tanguy/webdesign.html
@@ -37,14 +37,14 @@
       </nav>
     </header>
     <main>
-      <section class="section__solutions">
+      <section class="section__solutions__design">
         <div>
-        <h2>Web Design</h2>
-        <p>
-          We build websites that serve as powerful marketing tools <br/> and bring
-          memorable brand experiences.
-        </p>
-      </div>
+          <h2>Web Design</h2>
+          <p>
+            We build websites that serve as powerful marketing tools <br />
+            and bring memorable brand experiences.
+          </p>
+        </div>
       </section>
 
       <section class="section__tech">
