add style about

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./src/css/style.min.css">
+    <link rel="stylesheet" href="./src/css/style.min.css" />
     <title>About</title>
   </head>
   <body>
@@ -33,49 +33,54 @@
     <main>
       <section class="section__aboutUs">
         <div>
-        <h1>About Us</h1>
-        <p>
-          Founded in 2010, we are a creative agency that produces lasting
-          results for our clients. We've partnered with many startups,
-          corporations, and nonprofits alike to craft designs that make real
-          impact. We're always looking forward to creating brands, products, and
-          digital experiences that connect with our clients' audiences.
-        </p>
-      </div>
-      <div>
-        <img
-          src="./src/img/Group 3.jpg"
-          alt="work table"
-          class="section__aboutUs__img"
-        />
-      </div>
+          <h1>About Us</h1>
+          <p>
+            Founded in 2010, we are a creative agency that produces lasting
+            results for our clients. We've partnered with many startups,
+            corporations, and nonprofits alike to craft designs that make real
+            impact. We're always looking forward to creating brands, products,
+            and digital experiences that connect with our clients' audiences.
+          </p>
+        </div>
+        <div>
+          <img
+            src="./src/img/Group 3.jpg"
+            alt="work table"
+            class="section__aboutUs__img"
+          />
+        </div>
       </section>
       <section class="section__skills">
         <div>
-        <img
-          src="./src/img/Group 3 Copy.jpg"
-          alt="watching art"
-          class="section__skills__img"
-        />
+          <img
+            src="./src/img/Group 3 Copy.jpg"
+            alt="watching art"
+            class="section__skills__img"
+          />
         </div>
         <div>
-        <h1>World-class talent</h1>
-        <p>
-          We are a crew of strategists, problem-solvers, and technologists.
-          Every design is thoughtfully crafted from concept to launch, ensuring
-          success in its given market. We are constantly updating our skills in
-          a myriad of platforms. Our team is multi-disciplinary and we are not
-          merely interested in form — content and meaning are just as important.
-          We give great importance to craftsmanship, service, and prompt
-          delivery. Clients have always been impressed with our high-quality
-          outcomes that encapsulates their brand's story and mission.
-        </p>
+          <h1>World-class talent</h1>
+          <p>
+            We are a crew of strategists, problem-solvers, and technologists.
+            Every design is thoughtfully crafted from concept to launch,
+            ensuring success in its given market. We are constantly updating our
+            skills in a myriad of platforms. Our team is multi-disciplinary and
+            we are not merely interested in form — content and meaning are just
+            as important. We give great importance to craftsmanship, service,
+            and prompt delivery. Clients have always been impressed with our
+            high-quality outcomes that encapsulates their brand's story and
+            mission.
+          </p>
         </div>
       </section>
       <section class="section__location">
-        <article class="location__article__canada">
-          <img src="./src/img/Group 10.svg" alt="canada" class="canada__img" />
-          <h2>CANADA</h2>
+        <article class="location__article__belgium">
+          <img
+            src="./src/img/Group 10.svg"
+            alt="belgium"
+            class="belgium__img"
+          />
+          <h2>Belgium</h2>
           <a href="">SEE LOCATION</a>
         </article>
         <article class="location__article__australia">
@@ -99,24 +104,25 @@
       </section>
       <section class="section__solutions">
         <div>
-        <h1>The real deal</h1>
-        <p>
-          As strategic partners in our clients' businesses, we are ready to take
-          on any challenge as our own. Solving real problems require empathy and
-          collaboration, and we strive to bring a fresh perspective to every
-          opportunity. We make design and technology more accessible and give
-          you tools to measure success. We are visual storytellers in appealing
-          and captivating ways. By combining business and marketing strategies,
-          we inspire audiences to take action and drive real results.
-        </p>
-      </div>
-      <div>
-        <img
-          src="./src/img/Bitmap Copy.jpg"
-          alt="stick on the wall"
-          class="solutions__img"
-        />
-      </div>
+          <h1>The real deal</h1>
+          <p>
+            As strategic partners in our clients' businesses, we are ready to
+            take on any challenge as our own. Solving real problems require
+            empathy and collaboration, and we strive to bring a fresh
+            perspective to every opportunity. We make design and technology more
+            accessible and give you tools to measure success. We are visual
+            storytellers in appealing and captivating ways. By combining
+            business and marketing strategies, we inspire audiences to take
+            action and drive real results.
+          </p>
+        </div>
+        <div>
+          <img
+            src="./src/img/Bitmap Copy.jpg"
+            alt="stick on the wall"
+            class="solutions__img"
+          />
+        </div>
       </section>
     </main>
     <footer>
