--- a/mariya/locations.html
+++ b/mariya/locations.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="../src/css/style.min.css">
     <title>Locations</title>
   </head>
   <body>
@@ -32,6 +33,7 @@
 
     <main>
       <section class="section__location__belgium">
+        <div class="box">
         <h2>Belgium</h2>
         <div>
           <h3>Designo Central Office</h3>
@@ -41,9 +43,16 @@
           <h3>Contact</h3>
           <p>P : +1 253-863-8967 M : contact@designo.co</p>
         </div>
+      </div>
+      <div>
         <img src="../src/img/Group 4-2.png" alt="belgium_map" />
+      </div>
       </section>
       <section class="section__location__australia">
+        <div>
+        <img src="../src/img/Group 4.png" alt="australia_map" />
+        </div>
+        <div class="box">
         <h2>Australia</h2>
         <div>
           <h3>Designo AU Office</h3>
@@ -53,9 +62,10 @@
           <h3>Contact</h3>
           <p>P : (02) 6720 9092 M : contact@designo.au</p>
         </div>
-        <img src="../src/img/Group 4.png" alt="australia_map" />
+      </div>
       </section>
       <section class="section__location__uk">
+        <div class="box">
         <h2>United Kingdom</h2>
         <div>
           <h3>Designo UK Office</h3>
@@ -65,54 +75,69 @@
           <h3>Contact</h3>
           <p>P : 078 3115 1400 M : contact@designo.uk</p>
         </div>
+      </div>
+      <div>
         <img src="../src/img/Group 4-1.png" alt="unitedKingdom_map" />
+      </div>
       </section>
     </main>
-
     <footer>
       <section class="section__contact">
-        <h1>Let's talk about your project</h1>
-        <p>
-          Ready to take it to the next level? Contact us today and find out how
-          our expertise can help your business grow.
-        </p>
+        <div>
+          <h1>Let's talk about your project</h1>
+          <p>
+            Ready to take it to the next level? Contact us today and find out
+            how our expertise can help your business grow.
+          </p>
+        </div>
         <a href="">GET IN TOUCH</a>
       </section>
-      <section class="footer__nav">
-        <div>
-          <img
-            src="./src/img/Group 13-1.png"
-            alt="Logo Designo"
-            class="footer__nav__img"
-          />
-          <nav>
-            <ul class="footer__nav__order">
-              <li><a href="">Our compagnie</a></li>
-              <li><a href="./mariya/locations.html">Locations</a></li>
-              <li><a href="./mariya/contact.html">Contact</a></li>
+      <div class="lower__container">
+        <section class="footer__nav">
+          <div>
+            <img
+              src="./src/img/Group 13-1.png"
+              alt="Logo Designo"
+              class="footer__nav__img"
+            />
+            <nav>
+              <ul class="footer__nav__order">
+                <li><a href="">Our company</a></li>
+                <li><a href="./mariya/locations.html">Locations</a></li>
+                <li><a href="./mariya/contact.html">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+        </section>
+        <hr />
+        <div class="inline__lower__container">
+          <section class="section__info">
+            <div class="info__address">
+              <h3>Designo Central Office</h3>
+              <p>
+                386 Wellington Street <br />
+                1000 Brussels - Belgium
+              </p>
+            </div>
+            <div class="info__contact">
+              <h3>Contact Us (Central Office)</h3>
+              <p>
+                P : +1 253-863-8967 <br />
+                M : contact@designo.co
+              </p>
+            </div>
+          </section>
+          <section class="section__media">
+            <ul class="media__order">
+              <li><i class="fa-brands fa-facebook-square"></i></li>
+              <li><i class="fa-brands fa-youtube-square"></i></li>
+              <li><i class="fa-brands fa-twitter"></i></li>
+              <li><i class="fa-brands fa-pinterest"></i></li>
+              <li><i class="fa-brands fa-instagram"></i></li>
             </ul>
-          </nav>
+          </section>
         </div>
-      </section>
-      <section class="section__info">
-        <div class="info__address">
-          <h3>Designo Central Office</h3>
-          <p>386 Wellington Street1000 Brussels - Belgium</p>
-        </div>
-        <div class="info__contact">
-          <h3>Contact Us (Central Office)</h3>
-          <p>P : +1 253-863-8967 M : contact@designo.co Belgium</p>
-        </div>
-      </section>
-      <section class="section__media">
-        <ul class="media__order">
-          <li><i class="fa-brands fa-facebook-square"></i></li>
-          <li><i class="fa-brands fa-youtube-square"></i></li>
-          <li><i class="fa-brands fa-twitter"></i></li>
-          <li><i class="fa-brands fa-pinterest"></i></li>
-          <li><i class="fa-brands fa-instagram"></i></li>
-        </ul>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
