--- a/about.html
+++ b/about.html
@@ -70,12 +70,15 @@
             We are a crew of strategists, problem-solvers, and technologists.
             Every design is thoughtfully crafted from concept to launch,
             ensuring success in its given market. We are constantly updating our
-            skills in a myriad of platforms. Our team is multi-disciplinary and
-            we are not merely interested in form — content and meaning are just
-            as important. We give great importance to craftsmanship, service,
-            and prompt delivery. Clients have always been impressed with our
-            high-quality outcomes that encapsulates their brand's story and
-            mission.
+            skills in a myriad of platforms.
+          </p>
+          <br />
+          <p>
+            Our team is multi-disciplinary and we are not merely interested in
+            form — content and meaning are just as important. We give great
+            importance to craftsmanship, service, and prompt delivery. Clients
+            have always been impressed with our high-quality outcomes that
+            encapsulates their brand's story and mission.
           </p>
         </div>
       </section>
@@ -116,15 +119,18 @@
             take on any challenge as our own. Solving real problems require
             empathy and collaboration, and we strive to bring a fresh
             perspective to every opportunity. We make design and technology more
-            accessible and give you tools to measure success. We are visual
-            storytellers in appealing and captivating ways. By combining
-            business and marketing strategies, we inspire audiences to take
-            action and drive real results.
+            accessible and give you tools to measure success.
+          </p>
+          <br />
+          <p>
+            We are visual storytellers in appealing and captivating ways. By
+            combining business and marketing strategies, we inspire audiences to
+            take action and drive real results.
           </p>
         </div>
         <div>
           <img
-            src="./src/img/Bitmap Copy.jpg"
+            src="./src/img/Bitmap sol.png"
             alt="stick on the wall"
             class="solutions__img"
           />
