--- a/index.html
+++ b/index.html
@@ -40,19 +40,21 @@
       <section class="section__services">
         <article>
           <div>
-          <h1>Award-winning custom designs and digital branding solutions</h1>
-          <p>
-            With over 10 years in the industry, we are experienced in creating
-            fully responsive websites, app design, and engaging brand
-            experiences. Find out more about our services.
-          </p>
-          <a href="">Learn More</a>
+            <h1>Award-winning custom designs and digital branding solutions</h1>
+            <p>
+              With over 10 years in the industry, we are experienced in creating
+              fully responsive websites, app design, and engaging brand
+              experiences. Find out more about our services.
+            </p>
+            <a href="">Learn More</a>
           </div>
-          <!-- <img
-            src="./src/img/black_front copy 4-1.png"
-            alt="phone"
-            class="services__img"
-          /> -->
+          <div>
+            <img
+              src="./src/img/black_front copy 4-1.png"
+              alt="phone"
+              class="services__img"
+            />
+          </div>
         </article>
       </section>
       <section class="section__projects">
