--- a/mariya/locations.html
+++ b/mariya/locations.html
@@ -89,7 +89,7 @@
     <div class="lower__container">
       <section class="footer__nav">
         <div>
-          <img src="./src/img/Group 13-1.png" alt="Logo Designo" class="footer__nav__img" />
+          <img src="../src/img/Group 13-1.png" alt="Logo Designo" class="footer__nav__img" />
           <nav>
             <ul class="footer__nav__order">
               <li><a href="">Our company</a></li>
