--- a/Tanguy/appdesign.html
+++ b/Tanguy/appdesign.html
@@ -94,16 +94,30 @@
       </section>
 
       <section class="section__projects">
-        <article class="projects__web">
-          <img src="../src/img/Group 17.jpg" alt="image web desing" />
-          <h1>WEB DESIGN</h1>
-          <a href="webdesign.html" target="_blank">VIEW PROJECTS</a>
+        <article class="projects__web__design">
+          <div class="projects__web__design__img">
+            <img src="../src/img/web-design.png" alt="laptop" class="web" />
+            <div class="projects__web__design__text">
+              <h1>Web Design</h1>
+              <a href="webdesign.html" target="_blank"
+                >View projects
+                <img src="../src/img/Path 5.png" alt="arrow" />
+              </a>
+            </div>
+          </div>
         </article>
 
-        <article class="projects__graphic">
-          <img src="../src/img/Bitmap.jpg" alt="image graphic design" />
-          <h1>GRAPHIC DESIGN</h1>
-          <a href="">VIEW PROJECTS</a>
+        <article class="projects__graphic__design">
+          <div class="projects__graphic__design__img">
+            <img src="../src/img/Bitmap.jpg" alt="graphic" />
+            <div class="projects__graphic__design__text">
+              <h1>Graphic Design</h1>
+              <a href=""
+                >View projects
+                <img src="../src/img/Path 5.png" alt="arrow" />
+              </a>
+            </div>
+          </div>
         </article>
       </section>
     </main>
