--- a/Tanguy/webdesign.html
+++ b/Tanguy/webdesign.html
@@ -93,16 +93,30 @@
       </section>
 
       <section class="section__projects">
-        <article class="projects__app">
-          <img src="../src/img/Bitmap-1.jpg" alt="image app design" />
-          <h1>APP DESIGN</h1>
-          <a href="appdesign.html" target="_blank">VIEW PROJECTS</a>
+        <article class="projects__app__design">
+          <div class="projects__app__design__img">
+            <img src="../src/img/Bitmap-1.jpg" alt="smartphone" />
+            <div class="projects__app__design__text">
+              <h1>App Design</h1>
+              <a href="appdesign.html" target="_blank"
+                >View projects
+                <img src="../src/img/Path 5.png" alt="arrow" />
+              </a>
+            </div>
+          </div>
         </article>
 
-        <article class="projects__graphic">
-          <img src="../src/img/Bitmap.jpg" alt="image graphic design" />
-          <h1>GRAPHIC DESIGN</h1>
-          <a href="">VIEW PROJECTS</a>
+        <article class="projects__graphic__design">
+          <div class="projects__graphic__design__img">
+            <img src="../src/img/Bitmap.jpg" alt="graphic" class="graphic" />
+            <div class="projects__graphic__design__text">
+              <h1>Graphic Design</h1>
+              <a href=""
+                >View projects
+                <img src="../src/img/Path 5.png" alt="arrow" />
+              </a>
+            </div>
+          </div>
         </article>
       </section>
     </main>
